@@ -1,3 +1,9 @@
+2001-09-24  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tkMain.c (StdinProc): Update to handle change in
+	return type of Tcl_DStringAppend() from (char *) to (CONST char *).
+	[TIP 27]
+
 2001-09-23  Peter Spjuth  <peter.spjuth@space.se>
 	* generic/tkPack.c (ConfigureSlaves):
 	* tests/pack.test:
